crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__lookup_excludes_unreadable_specs.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: alice_draft
---
{
  "data": {
    "draft": {
      "createdAt": "2024-01-01T00:00:00+00:00",
      "detail": "alice",
      "id": "0000000000000010",
      "numSpecs": 1,
      "updatedAt": "2024-01-01T00:00:00+00:00"
    }
  }
}
