crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__lookup_foreign_and_unknown.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: responses
---
[
  {
    "data": {
      "draft": null
    }
  },
  {
    "data": {
      "draft": null
    }
  }
]
