crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__stage_specs.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: inserted
---
{
  "data": {
    "stageDraftSpecs": [
      "aliceCo/data/foo",
      "aliceCo/explicit-null",
      "aliceCo/in/capture-foo",
      "aliceCo/new"
    ]
  }
}
