crates/control-plane-api/src/server/public/graphql/drafts/snapshots/control_plane_api__server__public__graphql__drafts__test__stage_specs_omitted_nullables.snap
---
source: crates/control-plane-api/src/server/public/graphql/drafts/test.rs
expression: "updated[\"data\"][\"draft\"][\"specs\"][\"edges\"]"
---
[
  {
    "node": {
      "catalogName": "aliceCo/data/foo",
      "detail": null,
      "expectPubId": null
    }
  }
]
